--- a/backend/package.json
+++ b/backend/package.json
@@ -10,6 +10,8 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@types/dotenv": "^6.1.1",
+    "dotenv": "^17.2.2",
     "nodemon": "^3.1.10",
     "ts-node": "^10.9.2",
     "ws": "^8.18.3"
