--- a/omicron-client/package.json
+++ b/omicron-client/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@vercel/analytics": "^1.5.0",
     "lucide-react": "^0.542.0",
     "motion": "^12.23.12",
     "next": "15.3.4",
